; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mkimg/extr_format.c_format_select.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mkimg/extr_format.c_format_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mkimg_format = type { i32 }

@format = common dso_local global %struct.mkimg_format* null, align 8
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @format_select(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.mkimg_format*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.mkimg_format* null, %struct.mkimg_format** %4, align 8
  br label %5

5:                                                ; preds = %18, %1
  %6 = load %struct.mkimg_format*, %struct.mkimg_format** %4, align 8
  %7 = call %struct.mkimg_format* @format_iterate(%struct.mkimg_format* %6)
  store %struct.mkimg_format* %7, %struct.mkimg_format** %4, align 8
  %8 = icmp ne %struct.mkimg_format* %7, null
  br i1 %8, label %9, label %19

9:                                                ; preds = %5
  %10 = load i8*, i8** %3, align 8
  %11 = load %struct.mkimg_format*, %struct.mkimg_format** %4, align 8
  %12 = getelementptr inbounds %struct.mkimg_format, %struct.mkimg_format* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @strcasecmp(i8* %10, i32 %13)
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %9
  %17 = load %struct.mkimg_format*, %struct.mkimg_format** %4, align 8
  store %struct.mkimg_format* %17, %struct.mkimg_format** @format, align 8
  store i32 0, i32* %2, align 4
  br label %21

18:                                               ; preds = %9
  br label %5

19:                                               ; preds = %5
  %20 = load i32, i32* @EINVAL, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %19, %16
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local %struct.mkimg_format* @format_iterate(%struct.mkimg_format*) #1

declare dso_local i64 @strcasecmp(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
